--- a/facility_location_workshop/data_placement_as_flp.ipynb
+++ b/facility_location_workshop/data_placement_as_flp.ipynb
@@ -2,8 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f991ee4-dedf-4990-b86f-254e1861d2cd",
+   "id": "2df1016b-ab6e-49e5-962a-bcf886b87783",
    "metadata": {},
+   "source": [
+    "Reminder of Task 3.4 objectives:\n",
+    "\n",
+    "This task will develop AI-based analytics tools to classify applications upon their IO behaviour in order to \n",
+    "estimate their reproducibility. Once a family of reproducible applications is identified, its average behaviour \n",
+    "is evaluated and will be used to perform: \n",
+    "- optimizations on Ephemeral IO services resource allocation \n",
+    "- optimizations on data placement \n",
+    "- optimizations for energy efficiency \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fe2689c-1adc-46fe-aef3-3ecc63d32054",
+   "metadata": {},
+   "source": [
+    "Objectives are for M12-M36, but we need to provide inputs for:\n",
+    "- Task 3.1 – Instrumentation and Monitoring Design\n",
+    "- Task 3.2 – Application IO Instrumentation\n",
+    "- Task 3.3 – Infrastructure Monitoring and health check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6432b046-0344-47ef-9b97-a16c2295e1dd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -39,11 +68,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "79ee5206-d47b-4c08-a236-c840b008ba8c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "Requirement already satisfied: pulp in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (2.4)\n",
+      "Requirement already satisfied: amply>=0.1.2 in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (from pulp) (0.1.4)\n",
+      "Requirement already satisfied: docutils>=0.3 in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (from amply>=0.1.2->pulp) (0.17.1)\n",
+      "Requirement already satisfied: pyparsing in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (from amply>=0.1.2->pulp) (2.4.7)\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!export https_proxy=http://129.183.4.13:8080\n",
+    "!export http_proxy=http://129.183.4.13:8080\n",
+    "!pip install pulp"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "bb5c331f-ea2d-41d8-a339-db61cd4c25f3",
    "metadata": {},
    "outputs": [],
@@ -102,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "de1c10fc-6cf0-4649-91c5-e14274227dbb",
    "metadata": {},
    "outputs": [],
@@ -111,7 +167,7 @@
     "# Could detail files/objects to be read/written\n",
     "demand = {1:80, 2: 270, 3:250, 4: 160, 5: 180} #GB\n",
     "\n",
-    "# For instance:\n",
+    "# For instance (with lifecycle):\n",
     "#demand = {1: ['obj8', 'obj13'],\n",
     "#         2: ['obj12', 'obj13'],...}\n",
     "# For instance:\n",
@@ -121,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "807132f3-049a-4737-ab3f-7f2c20481f27",
    "metadata": {},
    "outputs": [],
@@ -135,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "c8de51be-74f2-450d-848b-fd1516a35c33",
    "metadata": {},
    "outputs": [],
@@ -147,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "a7524d4f-733d-4828-b48e-cf2162348104",
    "metadata": {},
    "outputs": [],
@@ -165,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "42ce013d-2d0c-4c65-a349-4a2d83f16b02",
    "metadata": {},
    "outputs": [],
@@ -177,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "7bde2644-8b7c-4bc1-acf3-f63a22e52c96",
    "metadata": {},
    "outputs": [],
@@ -200,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "17f0f04c-136f-4201-bc3d-5b8983fbb2f7",
    "metadata": {},
    "outputs": [],
@@ -208,9 +264,9 @@
     "# We introduce here a second variable (legacy from CLF problem)\n",
     "# x_T1 = 1 means that T1 will be used\n",
     "# it is useful for assignment cost of assigning T1 to a job/workflow\n",
-    "x = LpVariable.dicts(\"DiskUse\", disks, 0, 1, LpBinary) #x(i) indicates if disk i is accessed\n",
-    "\n",
-    "# it should be replace by the number of times a disk is accessed (to infer latency)\n",
+    "x = LpVariable.dicts(\"DiskUse\", disks, 0, 1, LpBinary) #x(i) indicates if disk i is accessed or not\n",
+    "# during this session/workflow\n",
+    "# it should be replaced by the number of times a disk is accessed (to infer latency)\n",
     "# it could be more complex: x_T1 = list timestamps at wich T1 is accessed\n",
     "# can allow to schedule access to T1 to avoid contention and manage finite bandwidth consumption\n",
     "# it could force us to shift to ML/RL solution\n",
@@ -219,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "5ec0962b-377e-4052-9aea-9b01e69c28e3",
    "metadata": {},
    "outputs": [],
@@ -244,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "e671aa26-e841-4251-816a-e10be3d73466",
    "metadata": {},
    "outputs": [],
@@ -253,7 +309,7 @@
     "#\n",
     "for j in nodes:\n",
     "    # data served on disks equals 100% from node j, no duplicates!\n",
-    "    prob += lpSum(y[(i, j)] for i in disks) == 1 "
+    "    prob += lpSum(y[(i, j)] for i in disks) == 1"
    ]
   },
   {
@@ -267,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "74ebf839-ab46-4af3-b994-bc69b6cc9f18",
    "metadata": {},
    "outputs": [],
@@ -281,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "a1033181-07a2-4cae-8fc9-ffe8f2862534",
    "metadata": {},
    "outputs": [],
@@ -289,7 +345,7 @@
     "# this constraint is a legacy for CLF problem\n",
     "for j in nodes:\n",
     "    for i in disks:\n",
-    "        # fraction of data served from node j to disk i is lower that demand of node j if disk is activated\n",
+    "        # fraction of data served from node j to disk i is lower that demand of node j if disk i is activated\n",
     "        prob += y[(i, j)] <= demand[j]*x[i] \n",
     "# well 0 <= y <= 1 and always <= to demand\n",
     "# should be kept with y = volume not portion\n",
@@ -299,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "98c1655b-68e2-435f-9f79-93c989e49529",
    "metadata": {},
    "outputs": [
@@ -319,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "c7eac384-7c47-44bf-881b-eba6f7268058",
    "metadata": {},
    "outputs": [
@@ -327,6 +383,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--- Params ---\n",
+      "nodes = [1, 2, 3, 4, 5]\n",
+      "demand = {1: 80, 2: 270, 3: 250, 4: 160, 5: 180}\n",
+      "disks capacity = {'T1': 300, 'T2': 500, 'T3': 1000.0}\n",
+      "bandwidths = {'T1': 10, 'T2': 2, 'T3': 1}\n",
+      "\n",
+      "--- Solution ---\n",
       "Establish connection with disk  T1\n",
       "Establish connection with disk  T2\n",
       "Establish connection with disk  T3\n",
@@ -354,6 +417,12 @@
    ],
    "source": [
     "# PRINT DECISION VARIABLES\n",
+    "print('--- Params ---')\n",
+    "print(f\"nodes = {nodes}\")\n",
+    "print(f\"demand = {demand}\")\n",
+    "print(f\"disks capacity = {capacity}\")\n",
+    "print(f\"bandwidths = {bandwidth}\")\n",
+    "print('\\n--- Solution ---')\n",
     "TOL = 1e-6\n",
     "for i in disks:\n",
     "    if x[i].value() > TOL:\n",
@@ -364,6 +433,33 @@
     "    \n",
     "# OPTIMAL SOLUTION\n",
     "print(f\"The cost of this placement is  = {value(prob.objective)} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "260f552f-13d4-49ba-813a-387164b4f929",
+   "metadata": {},
+   "source": [
+    "Outcomes:\n",
+    "- Which system to optimize on ?\n",
+    "    - known workflows ?\n",
+    "        some workflows could have higher priority (#1)\n",
+    "        we have information only from known workflows\n",
+    "        predicting wf behaviour is difficult\n",
+    "    - whole cluster ? \n",
+    "        specific optimization imply relaxation on global optimization\n",
+    "        some workflows may \"fail\"\n",
+    "- How to get/feed/update parameters for data placement ? from  instrumentation/health checking ?\n",
+    "    - demand (node j)\n",
+    "    - bandwidths (disk i, node j)\n",
+    "    - lantencies (or IOPS) (disk i, node j)\n",
+    "    - energy_consumption functions for (disk i, node j)\n",
+    "    - health_check (disk i, node j)\n",
+    "    \n",
+    "- (specific to task 3.4) gym-like environment to benchmark data placement algorithms :\n",
+    "    - or-gym : didn't find facility location problem\n",
+    "    - Iroko: The Data Center RL Gym\n",
+    "    - ecole : wide range for combinatorial optimization problems (gym-compatible)"
    ]
   }
  ],
