--- a/facility_location_workshop/data_placement_as_flp.ipynb
+++ b/facility_location_workshop/data_placement_as_flp.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "79ee5206-d47b-4c08-a236-c840b008ba8c",
    "metadata": {},
    "outputs": [
@@ -76,22 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "Requirement already satisfied: pulp in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (2.4)\n",
-      "Requirement already satisfied: amply>=0.1.2 in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (from pulp) (0.1.4)\n",
-      "Requirement already satisfied: docutils>=0.3 in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (from amply>=0.1.2->pulp) (0.17.1)\n",
-      "Requirement already satisfied: pyparsing in /home_nfs/mimounis/anaconda3/lib/python3.7/site-packages (from amply>=0.1.2->pulp) (2.4.7)\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home_nfs/mimounis/anaconda3/lib/python3.7/site-packages)\u001b[0m\n"
+      "Looking in indexes: http://172.16.118.9/artifactory/api/pypi/brdm-pypi-snapshot/simple\n",
+      "Requirement already satisfied: pulp in /home_nfs/mimounis/anaconda3/envs/ml/lib/python3.8/site-packages (2.6.0)\n"
      ]
     }
    ],
@@ -144,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "bb5c331f-ea2d-41d8-a339-db61cd4c25f3",
    "metadata": {},
    "outputs": [],
@@ -158,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "id": "de1c10fc-6cf0-4649-91c5-e14274227dbb",
    "metadata": {},
    "outputs": [],
@@ -177,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "807132f3-049a-4737-ab3f-7f2c20481f27",
    "metadata": {},
    "outputs": [],
@@ -191,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "id": "c8de51be-74f2-450d-848b-fd1516a35c33",
    "metadata": {},
    "outputs": [],
@@ -203,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "a7524d4f-733d-4828-b48e-cf2162348104",
    "metadata": {},
    "outputs": [],
@@ -221,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "id": "42ce013d-2d0c-4c65-a349-4a2d83f16b02",
    "metadata": {},
    "outputs": [],
@@ -233,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "7bde2644-8b7c-4bc1-acf3-f63a22e52c96",
    "metadata": {},
    "outputs": [],
@@ -256,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "17f0f04c-136f-4201-bc3d-5b8983fbb2f7",
    "metadata": {},
    "outputs": [],
@@ -275,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "5ec0962b-377e-4052-9aea-9b01e69c28e3",
    "metadata": {},
    "outputs": [],
@@ -300,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "id": "e671aa26-e841-4251-816a-e10be3d73466",
    "metadata": {},
    "outputs": [],
@@ -323,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "id": "74ebf839-ab46-4af3-b994-bc69b6cc9f18",
    "metadata": {},
    "outputs": [],
@@ -337,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "id": "a1033181-07a2-4cae-8fc9-ffe8f2862534",
    "metadata": {},
    "outputs": [],
@@ -355,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "id": "98c1655b-68e2-435f-9f79-93c989e49529",
    "metadata": {},
    "outputs": [
@@ -363,6 +349,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /home_nfs/mimounis/anaconda3/envs/ml/lib/python3.8/site-packages/pulp/apis/../solverdir/cbc/linux/64/cbc /tmp/a8c8b42528244a55b51a4632113501ab-pulp.mps timeMode elapsed branch printingOptions all solution /tmp/a8c8b42528244a55b51a4632113501ab-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 28 COLUMNS\n",
+      "At line 146 RHS\n",
+      "At line 170 BOUNDS\n",
+      "At line 189 ENDATA\n",
+      "Problem MODEL has 23 rows, 18 columns and 63 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Continuous objective value is 420.25 - 0.00 seconds\n",
+      "Cgl0003I 0 fixed, 0 tightened bounds, 6 strengthened rows, 0 substitutions\n",
+      "Cgl0003I 0 fixed, 0 tightened bounds, 7 strengthened rows, 0 substitutions\n",
+      "Cgl0003I 0 fixed, 0 tightened bounds, 3 strengthened rows, 0 substitutions\n",
+      "Cgl0003I 0 fixed, 0 tightened bounds, 1 strengthened rows, 0 substitutions\n",
+      "Cgl0003I 0 fixed, 0 tightened bounds, 1 strengthened rows, 0 substitutions\n",
+      "Cgl0003I 0 fixed, 0 tightened bounds, 1 strengthened rows, 0 substitutions\n",
+      "Cgl0004I processed model has 19 rows, 18 columns (18 integer (18 of which binary)) and 61 elements\n",
+      "Cutoff increment increased from 1e-05 to 0.00999\n",
+      "Cbc0038I Initial state - 9 integers unsatisfied sum - 2.28358\n",
+      "Cbc0038I Pass   1: suminf.    1.97674 (5) obj. 447.505 iterations 5\n",
+      "Cbc0038I Solution found of 578.11\n",
+      "Cbc0038I Rounding solution of 453.11 is better than previous of 578.11\n",
+      "\n",
+      "Cbc0038I Before mini branch and bound, 9 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Full problem 19 rows 18 columns, reduced to 6 rows 5 columns\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.01 seconds)\n",
+      "Cbc0038I Round again with cutoff of 452.526\n",
+      "Cbc0038I Reduced cost fixing fixed 4 variables on major pass 2\n",
+      "Cbc0038I Pass   2: suminf.    1.97674 (5) obj. 447.505 iterations 0\n",
+      "Cbc0038I Pass   3: suminf.    0.01297 (2) obj. 452.526 iterations 7\n",
+      "Cbc0038I Pass   4: suminf.    0.01297 (2) obj. 452.526 iterations 1\n",
+      "Cbc0038I Pass   5: suminf.    0.64000 (2) obj. 448.11 iterations 4\n",
+      "Cbc0038I Pass   6: suminf.    0.56934 (2) obj. 452.526 iterations 3\n",
+      "Cbc0038I Pass   7: suminf.    0.56934 (2) obj. 452.526 iterations 0\n",
+      "Cbc0038I Pass   8: suminf.    0.56934 (2) obj. 452.526 iterations 0\n",
+      "Cbc0038I Pass   9: suminf.    0.84723 (3) obj. 452.526 iterations 2\n",
+      "Cbc0038I Pass  10: suminf.    0.79066 (2) obj. 452.526 iterations 4\n",
+      "Cbc0038I Pass  11: suminf.    0.72000 (2) obj. 448.11 iterations 2\n",
+      "Cbc0038I Pass  12: suminf.    0.79066 (2) obj. 452.526 iterations 4\n",
+      "Cbc0038I Pass  13: suminf.    0.72000 (2) obj. 448.11 iterations 2\n",
+      "Cbc0038I Pass  14: suminf.    0.76459 (2) obj. 452.526 iterations 3\n",
+      "Cbc0038I Pass  15: suminf.    0.76459 (2) obj. 452.526 iterations 1\n",
+      "Cbc0038I Pass  16: suminf.    0.47082 (2) obj. 452.526 iterations 2\n",
+      "Cbc0038I Pass  17: suminf.    0.08000 (2) obj. 448.11 iterations 5\n",
+      "Cbc0038I Pass  18: suminf.    0.15066 (2) obj. 452.526 iterations 3\n",
+      "Cbc0038I Pass  19: suminf.    0.08000 (2) obj. 448.11 iterations 3\n",
+      "Cbc0038I Pass  20: suminf.    0.08000 (2) obj. 448.11 iterations 0\n",
+      "Cbc0038I Pass  21: suminf.    0.11635 (4) obj. 452.526 iterations 2\n",
+      "Cbc0038I Pass  22: suminf.    2.28358 (9) obj. 447.364 iterations 6\n",
+      "Cbc0038I Pass  23: suminf.    1.97674 (5) obj. 447.505 iterations 2\n",
+      "Cbc0038I Pass  24: suminf.    0.01297 (2) obj. 452.526 iterations 3\n",
+      "Cbc0038I Pass  25: suminf.    0.01297 (2) obj. 452.526 iterations 0\n",
+      "Cbc0038I Pass  26: suminf.    0.64000 (2) obj. 448.11 iterations 2\n",
+      "Cbc0038I Pass  27: suminf.    0.56934 (2) obj. 452.526 iterations 1\n",
+      "Cbc0038I Pass  28: suminf.    0.84723 (3) obj. 452.526 iterations 1\n",
+      "Cbc0038I Pass  29: suminf.    0.56934 (2) obj. 452.526 iterations 1\n",
+      "Cbc0038I Pass  30: suminf.    0.56934 (2) obj. 452.526 iterations 0\n",
+      "Cbc0038I Pass  31: suminf.    0.01297 (2) obj. 452.526 iterations 1\n",
+      "Cbc0038I No solution found this major pass\n",
+      "Cbc0038I Before mini branch and bound, 7 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Full problem 19 rows 18 columns, reduced to 6 rows 5 columns\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.01 seconds)\n",
+      "Cbc0038I After 0.01 seconds - Feasibility pump exiting with objective of 453.11 - took 0.01 seconds\n",
+      "Cbc0012I Integer solution of 453.11 found by feasibility pump after 0 iterations and 0 nodes (0.01 seconds)\n",
+      "Cbc0038I Full problem 19 rows 18 columns, reduced to 6 rows 5 columns\n",
+      "Cbc0006I The LP relaxation is infeasible or too expensive\n",
+      "Cbc0013I At root node, 0 cuts changed objective from 447.36373 to 447.36373 in 1 passes\n",
+      "Cbc0014I Cut generator 0 (Probing) - 1 row cuts average 0.0 elements, 4 column cuts (4 active)  in 0.000 seconds - new frequency is 1\n",
+      "Cbc0014I Cut generator 1 (Gomory) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 2 (Knapsack) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 3 (Clique) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 4 (MixedIntegerRounding2) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 5 (FlowCover) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 6 (TwoMirCuts) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 7 (ZeroHalf) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0001I Search completed - best objective 453.11, took 0 iterations and 0 nodes (0.01 seconds)\n",
+      "Cbc0035I Maximum depth 0, 4 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from 447.364 to 447.364\n",
+      "Probing was tried 1 times and created 5 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                453.11000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.01\n",
+      "Time (Wallclock seconds):       0.01\n",
+      "\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.01   (Wallclock seconds):       0.01\n",
+      "\n",
       "Status: Optimal\n"
      ]
     }
@@ -375,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "c7eac384-7c47-44bf-881b-eba6f7268058",
    "metadata": {},
    "outputs": [
@@ -464,10 +553,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "2a68977a79b93c24cbc8a4794e972515f7b5e0d643df6ea43f3aa68615ca2fc7"
+  },
   "kernelspec": {
    "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python37464bitbaseconda148081fa46834969a3b218adc4b68ee7"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -479,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
