update TODO list

--- a/facility_location_workshop/data_placement_as_flp.ipynb
+++ b/facility_location_workshop/data_placement_as_flp.ipynb
@@ -68,16 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "79ee5206-d47b-4c08-a236-c840b008ba8c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'export' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'export' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in indexes: http://172.16.118.9/artifactory/api/pypi/brdm-pypi-snapshot/simple\n",
-      "Requirement already satisfied: pulp in /home_nfs/mimounis/anaconda3/envs/ml/lib/python3.8/site-packages (2.6.0)\n"
+      "Requirement already satisfied: pulp in c:\\users\\a770398\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (2.6.0)\n"
      ]
     }
    ],
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "bb5c331f-ea2d-41d8-a339-db61cd4c25f3",
    "metadata": {},
    "outputs": [],
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "de1c10fc-6cf0-4649-91c5-e14274227dbb",
    "metadata": {},
    "outputs": [],
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "807132f3-049a-4737-ab3f-7f2c20481f27",
    "metadata": {},
    "outputs": [],
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "c8de51be-74f2-450d-848b-fd1516a35c33",
    "metadata": {},
    "outputs": [],
@@ -189,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "a7524d4f-733d-4828-b48e-cf2162348104",
    "metadata": {},
    "outputs": [],
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "42ce013d-2d0c-4c65-a349-4a2d83f16b02",
    "metadata": {},
    "outputs": [],
@@ -219,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "7bde2644-8b7c-4bc1-acf3-f63a22e52c96",
    "metadata": {},
    "outputs": [],
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "17f0f04c-136f-4201-bc3d-5b8983fbb2f7",
    "metadata": {},
    "outputs": [],
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "5ec0962b-377e-4052-9aea-9b01e69c28e3",
    "metadata": {},
    "outputs": [],
@@ -286,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "e671aa26-e841-4251-816a-e10be3d73466",
    "metadata": {},
    "outputs": [],
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "74ebf839-ab46-4af3-b994-bc69b6cc9f18",
    "metadata": {},
    "outputs": [],
@@ -323,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "a1033181-07a2-4cae-8fc9-ffe8f2862534",
    "metadata": {},
    "outputs": [],
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "98c1655b-68e2-435f-9f79-93c989e49529",
    "metadata": {},
    "outputs": [
@@ -349,109 +358,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the CBC MILP Solver \n",
-      "Version: 2.10.3 \n",
-      "Build Date: Dec 15 2019 \n",
-      "\n",
-      "command line - /home_nfs/mimounis/anaconda3/envs/ml/lib/python3.8/site-packages/pulp/apis/../solverdir/cbc/linux/64/cbc /tmp/a8c8b42528244a55b51a4632113501ab-pulp.mps timeMode elapsed branch printingOptions all solution /tmp/a8c8b42528244a55b51a4632113501ab-pulp.sol (default strategy 1)\n",
-      "At line 2 NAME          MODEL\n",
-      "At line 3 ROWS\n",
-      "At line 28 COLUMNS\n",
-      "At line 146 RHS\n",
-      "At line 170 BOUNDS\n",
-      "At line 189 ENDATA\n",
-      "Problem MODEL has 23 rows, 18 columns and 63 elements\n",
-      "Coin0008I MODEL read with 0 errors\n",
-      "Option for timeMode changed from cpu to elapsed\n",
-      "Continuous objective value is 420.25 - 0.00 seconds\n",
-      "Cgl0003I 0 fixed, 0 tightened bounds, 6 strengthened rows, 0 substitutions\n",
-      "Cgl0003I 0 fixed, 0 tightened bounds, 7 strengthened rows, 0 substitutions\n",
-      "Cgl0003I 0 fixed, 0 tightened bounds, 3 strengthened rows, 0 substitutions\n",
-      "Cgl0003I 0 fixed, 0 tightened bounds, 1 strengthened rows, 0 substitutions\n",
-      "Cgl0003I 0 fixed, 0 tightened bounds, 1 strengthened rows, 0 substitutions\n",
-      "Cgl0003I 0 fixed, 0 tightened bounds, 1 strengthened rows, 0 substitutions\n",
-      "Cgl0004I processed model has 19 rows, 18 columns (18 integer (18 of which binary)) and 61 elements\n",
-      "Cutoff increment increased from 1e-05 to 0.00999\n",
-      "Cbc0038I Initial state - 9 integers unsatisfied sum - 2.28358\n",
-      "Cbc0038I Pass   1: suminf.    1.97674 (5) obj. 447.505 iterations 5\n",
-      "Cbc0038I Solution found of 578.11\n",
-      "Cbc0038I Rounding solution of 453.11 is better than previous of 578.11\n",
-      "\n",
-      "Cbc0038I Before mini branch and bound, 9 integers at bound fixed and 0 continuous\n",
-      "Cbc0038I Full problem 19 rows 18 columns, reduced to 6 rows 5 columns\n",
-      "Cbc0038I Mini branch and bound did not improve solution (0.01 seconds)\n",
-      "Cbc0038I Round again with cutoff of 452.526\n",
-      "Cbc0038I Reduced cost fixing fixed 4 variables on major pass 2\n",
-      "Cbc0038I Pass   2: suminf.    1.97674 (5) obj. 447.505 iterations 0\n",
-      "Cbc0038I Pass   3: suminf.    0.01297 (2) obj. 452.526 iterations 7\n",
-      "Cbc0038I Pass   4: suminf.    0.01297 (2) obj. 452.526 iterations 1\n",
-      "Cbc0038I Pass   5: suminf.    0.64000 (2) obj. 448.11 iterations 4\n",
-      "Cbc0038I Pass   6: suminf.    0.56934 (2) obj. 452.526 iterations 3\n",
-      "Cbc0038I Pass   7: suminf.    0.56934 (2) obj. 452.526 iterations 0\n",
-      "Cbc0038I Pass   8: suminf.    0.56934 (2) obj. 452.526 iterations 0\n",
-      "Cbc0038I Pass   9: suminf.    0.84723 (3) obj. 452.526 iterations 2\n",
-      "Cbc0038I Pass  10: suminf.    0.79066 (2) obj. 452.526 iterations 4\n",
-      "Cbc0038I Pass  11: suminf.    0.72000 (2) obj. 448.11 iterations 2\n",
-      "Cbc0038I Pass  12: suminf.    0.79066 (2) obj. 452.526 iterations 4\n",
-      "Cbc0038I Pass  13: suminf.    0.72000 (2) obj. 448.11 iterations 2\n",
-      "Cbc0038I Pass  14: suminf.    0.76459 (2) obj. 452.526 iterations 3\n",
-      "Cbc0038I Pass  15: suminf.    0.76459 (2) obj. 452.526 iterations 1\n",
-      "Cbc0038I Pass  16: suminf.    0.47082 (2) obj. 452.526 iterations 2\n",
-      "Cbc0038I Pass  17: suminf.    0.08000 (2) obj. 448.11 iterations 5\n",
-      "Cbc0038I Pass  18: suminf.    0.15066 (2) obj. 452.526 iterations 3\n",
-      "Cbc0038I Pass  19: suminf.    0.08000 (2) obj. 448.11 iterations 3\n",
-      "Cbc0038I Pass  20: suminf.    0.08000 (2) obj. 448.11 iterations 0\n",
-      "Cbc0038I Pass  21: suminf.    0.11635 (4) obj. 452.526 iterations 2\n",
-      "Cbc0038I Pass  22: suminf.    2.28358 (9) obj. 447.364 iterations 6\n",
-      "Cbc0038I Pass  23: suminf.    1.97674 (5) obj. 447.505 iterations 2\n",
-      "Cbc0038I Pass  24: suminf.    0.01297 (2) obj. 452.526 iterations 3\n",
-      "Cbc0038I Pass  25: suminf.    0.01297 (2) obj. 452.526 iterations 0\n",
-      "Cbc0038I Pass  26: suminf.    0.64000 (2) obj. 448.11 iterations 2\n",
-      "Cbc0038I Pass  27: suminf.    0.56934 (2) obj. 452.526 iterations 1\n",
-      "Cbc0038I Pass  28: suminf.    0.84723 (3) obj. 452.526 iterations 1\n",
-      "Cbc0038I Pass  29: suminf.    0.56934 (2) obj. 452.526 iterations 1\n",
-      "Cbc0038I Pass  30: suminf.    0.56934 (2) obj. 452.526 iterations 0\n",
-      "Cbc0038I Pass  31: suminf.    0.01297 (2) obj. 452.526 iterations 1\n",
-      "Cbc0038I No solution found this major pass\n",
-      "Cbc0038I Before mini branch and bound, 7 integers at bound fixed and 0 continuous\n",
-      "Cbc0038I Full problem 19 rows 18 columns, reduced to 6 rows 5 columns\n",
-      "Cbc0038I Mini branch and bound did not improve solution (0.01 seconds)\n",
-      "Cbc0038I After 0.01 seconds - Feasibility pump exiting with objective of 453.11 - took 0.01 seconds\n",
-      "Cbc0012I Integer solution of 453.11 found by feasibility pump after 0 iterations and 0 nodes (0.01 seconds)\n",
-      "Cbc0038I Full problem 19 rows 18 columns, reduced to 6 rows 5 columns\n",
-      "Cbc0006I The LP relaxation is infeasible or too expensive\n",
-      "Cbc0013I At root node, 0 cuts changed objective from 447.36373 to 447.36373 in 1 passes\n",
-      "Cbc0014I Cut generator 0 (Probing) - 1 row cuts average 0.0 elements, 4 column cuts (4 active)  in 0.000 seconds - new frequency is 1\n",
-      "Cbc0014I Cut generator 1 (Gomory) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
-      "Cbc0014I Cut generator 2 (Knapsack) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
-      "Cbc0014I Cut generator 3 (Clique) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
-      "Cbc0014I Cut generator 4 (MixedIntegerRounding2) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
-      "Cbc0014I Cut generator 5 (FlowCover) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
-      "Cbc0014I Cut generator 6 (TwoMirCuts) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
-      "Cbc0014I Cut generator 7 (ZeroHalf) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
-      "Cbc0001I Search completed - best objective 453.11, took 0 iterations and 0 nodes (0.01 seconds)\n",
-      "Cbc0035I Maximum depth 0, 4 variables fixed on reduced cost\n",
-      "Cuts at root node changed objective from 447.364 to 447.364\n",
-      "Probing was tried 1 times and created 5 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
-      "\n",
-      "Result - Optimal solution found\n",
-      "\n",
-      "Objective value:                453.11000000\n",
-      "Enumerated nodes:               0\n",
-      "Total iterations:               0\n",
-      "Time (CPU seconds):             0.01\n",
-      "Time (Wallclock seconds):       0.01\n",
-      "\n",
-      "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.01   (Wallclock seconds):       0.01\n",
-      "\n",
       "Status: Optimal\n"
      ]
     }
@@ -464,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "c7eac384-7c47-44bf-881b-eba6f7268058",
    "metadata": {},
    "outputs": [
@@ -571,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
