--- a/cluster_simulator/notebooks/cluster_simulator_optim.ipynb
+++ b/cluster_simulator/notebooks/cluster_simulator_optim.ipynb
@@ -4,32 +4,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cluster_simulator'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-a7353128a788>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcluster\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCluster\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbandwidth_share_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompute_share_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mget_tier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mphase\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDelayPhase\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mComputePhase\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIOPhase\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname_app\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\cluster_simulator\\phase.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcluster\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCluster\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbandwidth_share_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompute_share_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mget_tier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mcluster_simulator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcluster\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEphemeralTier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cluster_simulator'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"../\") # go to parent dir\n",
+    "# imports\n",
     "import simpy\n",
     "from loguru import logger\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import math\n",
-    "from cluster import Cluster, Tier, bandwidth_share_model, compute_share_model, get_tier, convert_size\n",
-    "from phase import DelayPhase, ComputePhase, IOPhase, name_app\n",
-    "import copy\n",
     "import time\n",
-    "from analytics import display_run\n",
-    "from application import Application\n",
+    "import numpy as np\n",
+    "from cluster_simulator.cluster import Cluster, Tier, EphemeralTier, bandwidth_share_model, compute_share_model, get_tier, convert_size\n",
+    "from cluster_simulator.phase import DelayPhase, ComputePhase, IOPhase\n",
+    "from cluster_simulator.application import Application\n",
+    "from cluster_simulator.analytics import display_run\n",
     "\n",
     "# imports for surrogate models\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
