fixes migrating to new package folder

--- a/jobmodel/jobmodel/job_reconstruction.ipynb
+++ b/jobmodel/jobmodel/job_reconstruction.ipynb
@@ -259,16 +259,35 @@
    ],
    "source": [
     "from scipy import integrate\n",
-    "ts = 5 # sampling interval in seconds\n",
-    "ti = [0, 10, 20] # 4 events\n",
-    "wi = [30e3, 30e3, 0] # bytes of data written for each event\n",
-    "bi = [1e3]*len(ti)\n",
     "\n",
     "def job_duration(ti, wi, bi, ts):\n",
+    "    \"\"\"Determines job duration for a given app representation.\n",
+    "\n",
+    "    Args:\n",
+    "        ti (list): list of events\n",
+    "        wi (list): write volumes at each event\n",
+    "        bi (list): bandwidth of throughput for each Io event\n",
+    "        ts (float): sampling period of the signal.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: duration of the job\n",
+    "    \"\"\"\n",
     "    lag =  ts*np.diff(np.insert(np.array([ti]), 0, 0))\n",
     "    return np.sum((np.array(wi)/np.array(bi)) + lag)\n",
     "\n",
     "def ts_job(ti, wi, bi, ts, expand=None):\n",
+    "    \"\"\"Generates timeseries for a given job representation.\n",
+    "\n",
+    "    Args:\n",
+    "        ti (list): list of events\n",
+    "        wi (list): write volumes at each event\n",
+    "        bi (list): bandwidth of throughput for each Io event\n",
+    "        ts (float): sampling period of the signal.\n",
+    "        expand (float, optional): extent of timeline if additional expand is needed. Defaults to None which leads to job's own duration.\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: _description_\n",
+    "    \"\"\"   \n",
     "    if expand is None:\n",
     "        expand = job_duration(ti, wi, bi, ts)\n",
     "        print(f'duration = {expand}s')\n",
@@ -290,10 +309,14 @@
     "    plt.plot(t[-1], w[-1], 'or')\n",
     "    plt.grid(True)\n",
     "    \n",
+    "ts = 5 # sampling interval in seconds\n",
+    "ti = [0, 10, 20] # 4 events\n",
+    "wi = [30e3, 30e3, 0] # bytes of data written for each event\n",
+    "bi = [1e3]*len(ti)\n",
     "\n",
     "job1 = (ti, wi, bi) # on BB\n",
     "job2 = (ti, wi, [x/10 for x in bi]) # on PFS\n",
-    "speedup = job_duration(*job1,ts)/job_duration(*job2, ts)\n",
+    "speedup = job_duration(*job1, ts)/job_duration(*job2, ts)\n",
     "print(1/speedup)\n",
     "t, w1 = ts_job(*job1, ts, expand = 1200) \n",
     "t, w2 = ts_job(*job2, ts, expand = 1200) \n",
