adding kmeans heuristic on cluster0 weight

--- a/jobmodel/jobmodel/job_decompisition.ipynb
+++ b/jobmodel/jobmodel/job_decompisition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -114,13 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "nan\n",
+      "(array([], dtype=int64),)\n"
+     ]
+    },
     {
      "ename": "ValueError",
      "evalue": "setting an array element with a sequence.",
@@ -131,9 +140,9 @@
       "\u001b[1;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\jobmodel\\jobmodel\\job_decompisition.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 29>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=25'>26</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m bursts\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=27'>28</a>\u001b[0m signal \u001b[39m=\u001b[39m W[\u001b[39m250\u001b[39m:\u001b[39m450\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=28'>29</a>\u001b[0m bursts \u001b[39m=\u001b[39m burst_detect(signal)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=29'>30</a>\u001b[0m plt\u001b[39m.\u001b[39mrcParams[\u001b[39m\"\u001b[39m\u001b[39mfigure.figsize\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m (\u001b[39m10\u001b[39m,\u001b[39m5\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=30'>31</a>\u001b[0m \u001b[39mprint\u001b[39m(bursts)\n",
-      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\jobmodel\\jobmodel\\job_decompisition.ipynb Cell 4'\u001b[0m in \u001b[0;36mburst_detect\u001b[1;34m(W)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=19'>20</a>\u001b[0m d\u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mones(shape\u001b[39m=\u001b[39msignal\u001b[39m.\u001b[39mshape)\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39mmax(signal)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=20'>21</a>\u001b[0m n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(signal)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=21'>22</a>\u001b[0m [q, _, _, p] \u001b[39m=\u001b[39m bd\u001b[39m.\u001b[39;49mburst_detection(signal, d, \u001b[39mlen\u001b[39;49m(signal), \u001b[39m1.5\u001b[39;49m, \u001b[39m2\u001b[39;49m,smooth_win\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=22'>23</a>\u001b[0m bursts \u001b[39m=\u001b[39m bd\u001b[39m.\u001b[39menumerate_bursts(q, \u001b[39m'\u001b[39m\u001b[39ms=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39mstr\u001b[39m(\u001b[39m1.5\u001b[39m)\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m, g=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39mstr\u001b[39m(\u001b[39m1.0\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=23'>24</a>\u001b[0m bursts \u001b[39m=\u001b[39m bd\u001b[39m.\u001b[39mburst_weights(bursts, signal, d, p)\n",
-      "File \u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\jobmodel\\jobmodel\\burst_detection.py:81\u001b[0m, in \u001b[0;36mburst_detection\u001b[1;34m(r, d, n, s, gamma, smooth_win)\u001b[0m\n\u001b[0;32m     78\u001b[0m             cost[t,j] \u001b[39m=\u001b[39m tau(q[t\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m],j,gamma,real_n) \u001b[39m+\u001b[39m fit(d[t],r[t],p[j])\n\u001b[0;32m     80\u001b[0m     \u001b[39m#add the state with the minimum cost to the optimal state sequence\u001b[39;00m\n\u001b[1;32m---> 81\u001b[0m     q[t] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(cost[t,:] \u001b[39m==\u001b[39m \u001b[39mmin\u001b[39m(cost[t,:]))\n\u001b[0;32m     83\u001b[0m \u001b[39mreturn\u001b[39;00m q, d, r, p\n",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\jobmodel\\jobmodel\\job_decompisition.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 29>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=25'>26</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m bursts\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=27'>28</a>\u001b[0m signal \u001b[39m=\u001b[39m W[\u001b[39m250\u001b[39m:\u001b[39m450\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=28'>29</a>\u001b[0m bursts \u001b[39m=\u001b[39m burst_detect(signal)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=29'>30</a>\u001b[0m plt\u001b[39m.\u001b[39mrcParams[\u001b[39m\"\u001b[39m\u001b[39mfigure.figsize\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m (\u001b[39m10\u001b[39m,\u001b[39m5\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=30'>31</a>\u001b[0m \u001b[39mprint\u001b[39m(bursts)\n",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\jobmodel\\jobmodel\\job_decompisition.ipynb Cell 4\u001b[0m in \u001b[0;36mburst_detect\u001b[1;34m(W)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=19'>20</a>\u001b[0m d\u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mones(shape\u001b[39m=\u001b[39msignal\u001b[39m.\u001b[39mshape)\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39mmax(signal)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=20'>21</a>\u001b[0m n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(signal)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=21'>22</a>\u001b[0m [q, _, _, p] \u001b[39m=\u001b[39m bd\u001b[39m.\u001b[39;49mburst_detection(signal, d, \u001b[39mlen\u001b[39;49m(signal), \u001b[39m1.5\u001b[39;49m, \u001b[39m2\u001b[39;49m,smooth_win\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=22'>23</a>\u001b[0m bursts \u001b[39m=\u001b[39m bd\u001b[39m.\u001b[39menumerate_bursts(q, \u001b[39m'\u001b[39m\u001b[39ms=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39mstr\u001b[39m(\u001b[39m1.5\u001b[39m)\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m, g=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39mstr\u001b[39m(\u001b[39m1.0\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/jobmodel/jobmodel/job_decompisition.ipynb#ch0000003?line=23'>24</a>\u001b[0m bursts \u001b[39m=\u001b[39m bd\u001b[39m.\u001b[39mburst_weights(bursts, signal, d, p)\n",
+      "File \u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\jobmodel\\jobmodel\\burst_detection.py:85\u001b[0m, in \u001b[0;36mburst_detection\u001b[1;34m(r, d, n, s, gamma, smooth_win)\u001b[0m\n\u001b[0;32m     82\u001b[0m     \u001b[39m#add the state with the minimum cost to the optimal state sequence\u001b[39;00m\n\u001b[0;32m     84\u001b[0m     \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39mwhere(cost[t,:] \u001b[39m==\u001b[39m \u001b[39mmin\u001b[39m(cost[t,:])))\n\u001b[1;32m---> 85\u001b[0m     q[t] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(cost[t,:] \u001b[39m==\u001b[39m \u001b[39mmin\u001b[39m(cost[t,:]))\n\u001b[0;32m     87\u001b[0m \u001b[39mreturn\u001b[39;00m q, d, r, p\n",
       "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence."
      ]
     }
