--- a/job_decomposer/job_decomposer/stat_methods_exploration.ipynb
+++ b/job_decomposer/job_decomposer/stat_methods_exploration.ipynb
@@ -1120,7 +1120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('ml')",
+   "display_name": "Python 3.8.13 ('iosea-venv')",
    "language": "python",
    "name": "python3"
   },
@@ -1134,12 +1134,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2a68977a79b93c24cbc8a4794e972515f7b5e0d643df6ea43f3aa68615ca2fc7"
+    "hash": "c87beb4c7de1fcbf6155f8da331fc04a584374d4c389d75c2ece6a4f03553c96"
    }
   }
  },
