--- a/job_decomposer/job_decomposer/ml_methods_exploration.ipynb
+++ b/job_decomposer/job_decomposer/ml_methods_exploration.ipynb
@@ -1125,7 +1125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('venv': venv)",
+   "display_name": "Python 3.8.13 ('iosea-venv')",
    "language": "python",
    "name": "python3"
   },
@@ -1139,12 +1139,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0cef0c20bbb8210f988461e402472174951c630e7b333e50248af84552a55e22"
+    "hash": "c87beb4c7de1fcbf6155f8da331fc04a584374d4c389d75c2ece6a4f03553c96"
    }
   }
  },
